...
            Box(
                modifier = Modifier
                    .fillMaxSize()
                    .widthIn(max = 720.dp)
                    .testTag(
                        if (isWifiSetupSurface) {
                            "device_wifi.surface"
                        } else {
                            "device_pairing.surface"
                        },
                    )
                    .align(Alignment.TopCenter),
            ) {
...
